@@ -32,6 +32,10 @@ These settings can be overridden on a per-repository basis using
   Set to false to prevent the git-annex assistant and git-annex sync
   from automatically committing changes to files in the repository.
 
+* `annex.synccontent`
+
+  Set to true to make git-annex sync default to syncing content.
+
 # EXAMPLE
 
 Suppose you want to prevent git annex sync from committing changes
@@ -40,7 +44,12 @@ repository. Then run:
 
 	git annex config --set annex.autocommit false
 
-If you change your mind, you can get back to the default behavior:
+If you want to override that in a partiticular clone, just use git config
+in the clone:
+
+	git config annex.autocommit true
+
+And to get back to the default behavior:
 
 	git annex config --unset annex.autocommit
 
